fix(frontend): fix github logo alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -101,11 +101,14 @@ td.report-value {
   }
 }
 
+.flex-container {
+  display: flex;
+  align-items: center;
+}
 
-
-
-
-
+.github-logo {
+  margin-right: 8px;
+}
 
 @media (min-width: 576px) {
   mat-sidenav{
